1.99.9 - Thank you to mechano (http://www.mechanicamente.it) for the second donation!


1.99.8 - Thank you to zukunft.com for the first donation!
- P4A_DB_Source::getFilters now works also with multivalue fields
- function htmlspecialchars_decode was added if php<5.0
- Serbian translation was added (thanks to Pedja)
- Hindi translation was added (thank to Prashant Singh Pawar)
- a bug on P4A_Field::getAsImage() was fixed
- phpThumb was updated to 1.7.4
- some errors with date_caledar languages were fixed (P4A_I18N_DATE_CALENDAR_LANGUAGE was introduced in format files)
- CREDITS file was removed, all credits are in the CHANGELOG

1.99.7
- some bugs with multiple rich_textarea and ajax events were fixed
- Turkish translation was added (thanks to Ilyas Toker)
- a bug with disabled rich_textareas was solved

1.99.6
- beforeMovement and afterMovement event triggers were added to P4A_DB_Navigator
- P4A_Table_Navigation_Bar now says "page 1 of 1" instead of "page 1 of 0" if data source is empty
- a bugfix on P4A_Data_Source::firstRow() was done
- javascript code for setFocus() function was simplified
- javascript code for onReturnPress() function was changed
- a bug with P4A_Box constructor was fixed
- PEAR::Validate 0.6.4 was added to pear repository
- P4A_DB_Navigator now highlights the droppable item when a draggable is over it
- P4A_DB_NAvigator does not show the "home" icon if "movements to root" are not allowed (saving space)
- Chinese Traditional translation was added (thanks to 日崎)
- isSortable(), addOrder(), setOrder(), getOrder(), hasOrder(), dropOrder() were moved from P4A_DB_Source to P4A_Data_Source
- a bug with ajax autodetection and configuration was fixed
- P4A_Data_Source::newRow() now triggers beforeMoveRow and afterMoveRow events
- when a row in a P4A_Data_Source is deleted we move to first row instead of last row (caused troubles with db_navigator)