@@ -1,5 +1,6 @@
 1.99.9 - Thank you to mechano (http://www.mechanicamente.it) for the second donation!
-
+- window's title was added to sample applications
+- strict validation bugfixes on P4A_Widget were done
 
 1.99.8 - Thank you to zukunft.com for the first donation!
 - P4A_DB_Source::getFilters now works also with multivalue fields
